packages/apps/spaces/styles/remirror-editor.scss
/* ... */
.remirror-theme h2 {
  font-size: var(--chakra-fontSizes-lg);
}

.remirror-theme h3 {
  font-size: var(--chakra-fontSizes-md);
}

.remirror-theme h4 {
  font-size: var(--rmr-font-size-2);
}

.remirror-theme h5 {
  font-size: var(--rmr-font-size-1);
}

.remirror-theme h6 {
  font-size: var(--rmr-font-size-0);
}

.remirror-theme .ProseMirror {
  width: 100%;
  border-radius: var(--rmr-radius-border);
  outline: none;
  margin-bottom: 4px;
  overflow-x: hidden;
  min-height: 45px;
}

.remirror-editor-wrapper {
  max-height: inherit;
  overflow: auto;
}

.customeros-logger .remirror-editor-wrapper {
  min-height: 102px;
}
.customeros-logger .remirror-editor,
.customeros-logger .remirror-is-empty {
  min-height: 75px;
}

.remirror-theme .ProseMirror p,
.remirror-theme .ProseMirror h1,
.remirror-theme .ProseMirror h2,
.remirror-theme .ProseMirror h3,
.remirror-theme .ProseMirror h4,
.remirror-theme .ProseMirror h4,
.remirror-theme .ProseMirror h5,
.remirror-theme .ProseMirror h6,
.remirror-theme .ProseMirror span {
  margin: 0;
}

.customeros-remirror-button {
  font-size: inherit;
  color: var(--chakra-colors-gray-400);
  border-radius: 4px;

  &:hover,
  &:focus,
  &:focus-visible,
  &[data-active] {
    background: var(--chakra-colors-gray-100);
    color: var(--chakra-colors-gray-500);
  }
}
.customeros-remirror-submit-button {
  background: white;
  color: var(--chakra-colors-gray-500);
  border: 1px solid var(--chakra-colors-gray-300);
  &:active,
  &:focus-visible,
  &:hover {
    background: var(--chakra-colors-gray-50);
    color: var(--chakra-colors-gray-700);
    border: 1px solid var(--chakra-colors-gray-300);
  }
  &:focus-visible {
    box-shadow: 0 0 0 4px var(--chakra-colors-gray-50);
  }
}

.customeros-remirror-tooltip {
  position: relative;
  transform-origin: var(--popper-transform-origin);
  opacity: 1;
  transform: none;
  background: var(--tooltip-bg);
  color: var(--tooltip-fg);
  --tooltip-bg: var(--chakra-colors-gray-700);
  --tooltip-fg: var(--chakra-colors-whiteAlpha-900);
  --popper-arrow-bg: var(--tooltip-bg);
  -webkit-padding-start: var(--chakra-space-3);
  padding-inline-start: var(--chakra-space-3);
  -webkit-padding-end: var(--chakra-space-3);
  padding-inline-end: var(--chakra-space-3);
  padding-top: var(--chakra-space-2);
  padding-bottom: var(--chakra-space-2);
  border-radius: var(--chakra-radii-md);
  font-weight: var(--chakra-fontWeights-medium);
  font-size: var(--chakra-fontSizes-md);
  box-shadow: var(--chakra-shadows-lg);
  max-width: var(--chakra-sizes-xs);
  z-index: 9999;
}

.chakra-portal div:has(> .customeros-remirror-tooltip) {
  z-index: 10;
}

.slack_strikethrough {
  text-decoration: line-through;
}

.slack-mention {
  // copied from light theme of slack
  font-weight: 400;
  background: var(--chakra-colors-gray-100);
  color: var(--chakra-colors-gray-700);
  border-radius: 2px;
  font-size: 14px;
  padding-inline-end: 2px;
  padding-inline-start: 2px;
  padding: 1px 3px;
}

.slack-container {
  white-space-collapse: break-spaces;
}
.ProseMirror-widget,
.remirror-positioner {
  //background: blue;
}
.remirror-floating-popover {
  z-index: 999;
  transform: unset;
  top: 23px;
  //background: blue;
}

.customeros-tag {
  color: var(--chakra-colors-gray-700);
  font-weight: var(--chakra-fontWeights-medium);
  &:before {
    content: "#";
  }
}
.customeros-mention {
  color: var(--chakra-colors-gray-700);
  font-weight: var(--chakra-fontWeights-medium);
  &:before {
    content: "@";
  }
}

.floating-menu {
  --menu-bg: #fff;
  --menu-shadow: var(--chakra-shadows-sm);
  color: inherit;
  min-width: 100%;
  z-index: 1;
  border-radius: var(--chakra-radii-lg);
  border-width: 1px;
  background: var(--menu-bg);
  box-shadow: var(--chakra-shadows-md);
  max-height: 300px;
  overflow-y: auto;
  --input-border-radius: var(--chakra-radii-md);
  position: relative;
  -webkit-overflow-scrolling: touch;
  border-color: var(--chakra-colors-gray-200);

  &:has(.floating-menu-option) {
    padding: var(--chakra-space-2);
  }
}

.floating-menu-option {
  -webkit-padding-start: var(--chakra-space-3);
  padding-inline-start: var(--chakra-space-3);
  -webkit-padding-end: var(--chakra-space-3);
  padding-inline-end: var(--chakra-space-3);
  transition-property: var(--chakra-transition-property-background);
  transition-duration: var(--chakra-transition-duration-ultra-fast);
  transition-timing-function: var(--chakra-transition-easing-ease-in);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  text-align: start;
  font-size: var(--chakra-fontSizes-md);
  padding: 0.4rem 0.8rem;
  --menu-bg: var(--chakra-colors-gray-100);
  color: var(--chakra-colors-gray-700);
  border-radius: var(--chakra-radii-md);

  &:focus,
  &.highlighted {
    background: var(--chakra-colors-primary-50);
    box-shadow: var(--chakra-shadows-menuOptionsFocus);
  }
  &:hover,
  &.hovered {
    background: var(--chakra-colors-gray-100);
  }
}

.remirror-editor.ProseMirror::selection {
  background: transparent;
}

.remirror-positioner {
  background: #b4d5fe !important;
}

